[package]
name = "chan"
version = "0.1.0"
authors = ["Esbjörn Stenberg <me@stagrim.com>"]
edition = "2018"

# For generating shell completions script at build time
build = "build.rs"

[build-dependencies]
clap = "2.23"

[dependencies]
clap = "2.33.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
select = "0.5.0"
curl = "0.4.35"