[package]
name = "chan"
version = "0.1.0"
authors = ["Esbjörn Stenberg <me@stagrim.com>"]
edition = "2018"

# For generating shell completions script at build time
build = "build.rs"

[build-dependencies]
clap = "2.23"

[dependencies]
clap = "2.33.3"
attohttpc = "0.17.0"
select = "0.5.0"
ansi_term = "0.12.1"