[package]
name = "chan"
version = "0.1.0"
authors = ["Esbjörn Stenberg <me@stagrim.com>"]
edition = "2018"

# For generating shell completions script at build time
build = "build.rs"

[build-dependencies]
clap = "2.23"

[dependencies]
# Handels CLI
clap = "2.33.3"
# Downloads webpage and images
attohttpc = "0.17.0"
# Find all links on site, gets thread subject
select = "0.5.0"
# Colored output
ansi_term = "0.12.1"
# Modify file mdate when flag is passed
filetime = "0.2.14"
